force-app/main/default/objects/User_Certification_Inscription__c/User_Certification_Inscription__c.object-meta.xml
<CustomObject>
    <label>User Certification Inscription</label>
    <nameField>
        <label>User Certification Inscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Certifcation Inscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>