force-app/main/default/objects/User_Certification_Inscription__c/fields/User_Certification__c.field-meta.xml
<CustomField>
    <fullName>User_Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Certification</label>
    <referenceTo>ta_Certification__c</referenceTo>
    <relationshipLabel>User Certifcation Inscriptions</relationshipLabel>
    <relationshipName>User_Certifcation_Inscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>